RESOLVED FIXED58478
Fix GraphicsContext3DQt.cpp compilation warnings treated as errors
https://bugs.webkit.org/show_bug.cgi?id=58478
Summary Fix GraphicsContext3DQt.cpp compilation warnings treated as errors
Andrew Wason
Reported 2011-04-13 14:17:27 PDT
GraphicsContext3DQt.cpp fails to build due to some compiler warnings that are treated as errors: cc1plus: warnings being treated as errors ../../../Source/WebCore/platform/graphics/qt/GraphicsContext3DQt.cpp: In member function 'void* WebCore::GraphicsContext3DInternal::getProcAddress(const WTF::String&)': ../../../Source/WebCore/platform/graphics/qt/GraphicsContext3DQt.cpp:591: error: 'QString::QString(const char*)' is deprecated (declared at /opt/motionbox/foundation/6.1.4-6-gcfb3251-dirty/include/QtCore/qstring.h:426) ../../../Source/WebCore/platform/graphics/qt/GraphicsContext3DQt.cpp: In member function 'void WebCore::GraphicsContext3D::reshape(int, int)': ../../../Source/WebCore/platform/graphics/qt/GraphicsContext3DQt.cpp:659: error: suggest parentheses around '&&' within '||' make[1]: *** [obj/release/GraphicsContext3DQt.o] Error 1 These were fixed in a patch for bug #57530 but should be in a separate patch as suggested. Separate patch will be attached.
Attachments
fix compiler warnings (1.79 KB, patch)
2011-04-13 14:20 PDT, Andrew Wason
no flags
Andrew Wason
Comment 1 2011-04-13 14:20:28 PDT
Created attachment 89457 [details] fix compiler warnings
Benjamin Poulain
Comment 2 2011-04-14 05:40:18 PDT
*** Bug 58527 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3 2011-04-14 07:00:19 PDT
Comment on attachment 89457 [details] fix compiler warnings Clearing flags on attachment: 89457 Committed r83853: <http://trac.webkit.org/changeset/83853>
WebKit Commit Bot
Comment 4 2011-04-14 07:00:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.