2011-04-14  Andrew Wason  <rectalogic@rectalogic.com>

Reviewed by Andreas Kling.

        Fix GraphicsContext3DQt.cpp compilation warnings treated as errors
        https://bugs.webkit.org/show_bug.cgi?id=58478

        No new tests.

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3DInternal::getProcAddress):
         Do not use deprecated QString constructor to avoid warning.
        (WebCore::GraphicsContext3D::reshape):
         Use parenthesis to avoid warning.

Canonical link: https://commits.webkit.org/73610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83853 268f45cc-cd09-0410-ab3c-d52691b4dbfc