Source/WebCore/platform/graphics/qt/GraphicsContext3DQt.cpp
@@ -594,7 +594,7 @@ void* GraphicsContext3DInternal::getProcAddress(const String& proc)
     for (int i = 0; i < 3; i++) {
         String nameWithExt = proc + ext[i];
 
-        void* addr = m_glWidget->context()->getProcAddress(nameWithExt.utf8().data());
+        void* addr = m_glWidget->context()->getProcAddress(QString(nameWithExt));
         if (addr) 
             return addr;
     }
@@ -662,7 +662,7 @@ PassRefPtr<ImageData> GraphicsContext3D::paintRenderingResultsToImageData()
 
 void GraphicsContext3D::reshape(int width, int height)
 {
-    if (width == m_currentWidth && height == m_currentHeight || (!m_internal))
+    if ((width == m_currentWidth && height == m_currentHeight) || (!m_internal))
         return;
 
     m_currentWidth = width;
